--- a/content/links/index.html
+++ b/content/links/index.html
@@ -131,3 +131,10 @@ Estimating a Parameter from a Random Sample <a href="https://t.co/H2KxnLzDyH">pi
 <li><p><a href="http://journals.sagepub.com/doi/abs/10.1177/0003122418806282">Guidelines for quantitative submissions ASR</a></p></li>
 </ul>
 </div>
+<div id="otros-varios" class="section level1">
+<h1>Otros varios</h1>
+<div class="figure">
+<img src="https://www.circles.gallery/create" alt="" />
+<p class="caption"><a href="https://www.circles.gallery/create" class="uri">https://www.circles.gallery/create</a></p>
+</div>
+</div>
