--- a/content/docencia/index.html
+++ b/content/docencia/index.html
@@ -9,13 +9,23 @@ author: " "
 <div id="universidad-de-chile" class="section level2">
 <h2>Universidad de Chile</h2>
 <div id="section" class="section level3">
-<h3>2021</h3>
+<h3>2022</h3>
 <ul>
 <li><a href="https://multivariada.netlify.app/">Estadística multivariada</a></li>
+</ul>
+</div>
+<div id="section-1" class="section level3">
+<h3>2021</h3>
+<ul>
+<li><a href="https://version2021--multivariada.netlify.app/">Estadística multivariada</a></li>
 <li><a href="/post/coloquio-2021/">Coloquio investigación en desigualdad y ciudadanía</a></li>
 <li><a href="/post/seminarios/">Seminarios de grado / memorias / tesis</a></li>
 <li><a href="https://cienciasocialabierta.netlify.com/">Ciencia Social Abierta</a></li>
-<li><h3 id="section-1">2020</h3></li>
+</ul>
+</div>
+<div id="section-2" class="section level3">
+<h3>2020</h3>
+<ul>
 <li><a href="https://version2020--multivariada.netlify.app/">Estadística multivariada</a></li>
 <li><a href="https://version2020--cienciasocialabierta.netlify.app/">Ciencia Social Abierta</a></li>
 <li><a href="/post/seminarios/">Seminario de grado</a></li>
@@ -23,7 +33,7 @@ author: " "
 <li><a href="documents/magister-facso-2020/magister_web.html">Aspectos subjetivos desigualdad económica - Magister en Ciencias Sociales FACSO</a></li>
 </ul>
 </div>
-<div id="section-2" class="section level3">
+<div id="section-3" class="section level3">
 <h3>2019</h3>
 <ul>
 <li><a href="/talleres-cursos/diplomado_multinivel/mlm-dip.html">Modelos Multinivel - Diplomado Análisis Multivariable</a></li>
