update coloquio y desarrollo tesis

--- a/content/docencia/index.html
+++ b/content/docencia/index.html
@@ -12,13 +12,15 @@ author: " "
 <h3>2022</h3>
 <ul>
 <li><a href="https://multivariada.netlify.app/">Estadística multivariada</a></li>
+<li><a href="/post/coloquio/">Coloquio investigación en desigualdad y ciudadanía</a></li>
+<li><a href="/post/seminarios/">Seminarios de grado / memorias / tesis</a></li>
 </ul>
 </div>
 <div id="section-1" class="section level3">
 <h3>2021</h3>
 <ul>
 <li><a href="https://version2021--multivariada.netlify.app/">Estadística multivariada</a></li>
-<li><a href="/post/coloquio-2021/">Coloquio investigación en desigualdad y ciudadanía</a></li>
+<li><a href="/post/coloquio/">Coloquio investigación en desigualdad y ciudadanía</a></li>
 <li><a href="/post/seminarios/">Seminarios de grado / memorias / tesis</a></li>
 <li><a href="https://cienciasocialabierta.netlify.com/">Ciencia Social Abierta</a></li>
 </ul>
