--- a/content/docencia/index.html
+++ b/content/docencia/index.html
@@ -13,7 +13,7 @@ author: " "
 <ul>
 <li><a href="https://multivariada.netlify.app/">Estadística multivariada</a></li>
 <li><a href="/post/coloquio/">Coloquio investigación en desigualdad y ciudadanía</a></li>
-<li><a href="/post/seminarios/">Seminarios de grado / memorias / tesis</a></li>
+<li><a href="/post/desarrollo-tesis/">Seminarios de grado / memorias / tesis</a></li>
 </ul>
 </div>
 <div id="section-1" class="section level3">
@@ -21,7 +21,7 @@ author: " "
 <ul>
 <li><a href="https://version2021--multivariada.netlify.app/">Estadística multivariada</a></li>
 <li><a href="/post/coloquio/">Coloquio investigación en desigualdad y ciudadanía</a></li>
-<li><a href="/post/seminarios/">Seminarios de grado / memorias / tesis</a></li>
+<li><a href="/post/desarrollo-tesis/">Seminarios de grado / memorias / tesis</a></li>
 <li><a href="https://cienciasocialabierta.netlify.com/">Ciencia Social Abierta</a></li>
 </ul>
 </div>
@@ -30,7 +30,7 @@ author: " "
 <ul>
 <li><a href="https://version2020--multivariada.netlify.app/">Estadística multivariada</a></li>
 <li><a href="https://version2020--cienciasocialabierta.netlify.app/">Ciencia Social Abierta</a></li>
-<li><a href="/post/seminarios/">Seminario de grado</a></li>
+<li><a href="/post/desarrollo-tesis/">Seminario de grado</a></li>
 <li><a href="/post/coloquio2020/">Coloquio investigación en desigualdad y ciudadanía</a></li>
 <li><a href="documents/magister-facso-2020/magister_web.html">Aspectos subjetivos desigualdad económica - Magister en Ciencias Sociales FACSO</a></li>
 </ul>
