update, price, encuestas sociales

--- a/content/docencia/index.html
+++ b/content/docencia/index.html
@@ -11,6 +11,7 @@ author: " "
 <div id="section" class="section level3">
 <h3>2022</h3>
 <ul>
+<li><a href="https://encuestas-sociales.netlify.app/">Encuestas Sociales: Diseño, Análisis y reporte</a></li>
 <li><a href="https://multivariada.netlify.app/">Estadística multivariada</a></li>
 <li><a href="/post/coloquio/">Coloquio investigación en desigualdad y ciudadanía</a></li>
 <li><a href="/post/desarrollo-tesis/">Seminarios de grado / memorias / tesis</a></li>
