--- a/content/project/fondecyt-edumer/index.html
+++ b/content/project/fondecyt-edumer/index.html
@@ -40,6 +40,9 @@ url_video: ""
 </div>
 <div id="documentos" class="section level1">
 <h1>Documentos</h1>
+<ul>
+<li><a href="Formulacion_REG_esp.pdf">Formulación propuesta</a></li>
+</ul>
 </div>
 <div id="equipo" class="section level1">
 <h1>Equipo</h1>
@@ -50,10 +53,12 @@ url_video: ""
 <li>Camila Moyano (Centro de Justicia Educacional, Universidad Católica)</li>
 <li>Mauricio Salgado (Sociología - Universidad Andrés Bello).</li>
 </ul>
-<p><strong>Asistentes de investigación:</strong>
-- Adolfo Maza
-- Francisco Molina
-- Kevin Carrasco</p>
+<p><strong>Asistentes de investigación:</strong></p>
+<ul>
+<li>Samanta Alarcón</li>
+<li>Francisco Molina</li>
+<li>Kevin Carrasco</li>
+</ul>
 <p><strong>Periodo</strong>: 2021-2024</p>
 </div>
 <div id="tesistas" class="section level1">
