docencia reorganizado y post presentaciones

--- a/static/presentations/invalsi-2022/INVALSI_2022-focused-on-radical-.html
+++ b/static/presentations/invalsi-2022/INVALSI_2022-focused-on-radical-.html
@@ -62,17 +62,14 @@ VII Seminar INVALSI Rome. Italy - October 28, 2022]
 ]
 ]
 
-
-
-
-
+.medium[
 .pull-right-wide[
 .right[
 .content-box-gray[
 ## .red[Youth predispositions to participate in disruptive or radical actions]
 &lt;br style="content:''; padding: 0,5px 0;" /&gt;
 ### .text_70[Gaps across countries and years]
-]
+]]
 
 .content-box-red[
 .small[
@@ -390,7 +387,7 @@ class: inverse animated slideInRight fadeOutLeft
 ---
 ## Discussion
 
-- The willingness to participate in radical actions increase between 1999, 2009 and 2016.
+- The willingness to participate in radical actions increase between 1999, 2009 and 2016 but country variation on that patterns.
 
 - Spraying seem to be a more common disposition than blocking the traffic, and both are more common than occupying
 
@@ -399,7 +396,7 @@ class: inverse animated slideInRight fadeOutLeft
 ---
 ## Discussion: inequality
 
-- In more unequal contexts students tend to show higher predisposition to participate in disruptive actions. This results appear mainly in 2016, less clear in 2009 and no in 1999 but country variation on that patterns
+- In more unequal contexts students tend to show higher predisposition to participate in disruptive actions. This results appear mainly in 2016, less clear in 2009 and no in 1999.
 
 - For the case of radical actions, unequal context seem to matter more in recent years.
 
@@ -461,14 +458,14 @@ VII Seminar INVALSI Rome. Italy - October 28, 2022]
 
 
 
-
+.medium[
 .pull-right-wide[
 .right[
 .content-box-gray[
 ## .red[Youth predispositions to participate in disruptive or radical actions]
 &lt;br style="content:''; padding: 0,5px 0;" /&gt;
 ### .text_70[Gaps across countries and years]
-]
+]]
 
 .content-box-red[
 .small[
