update horas ofi

--- a/content/links/index.html
+++ b/content/links/index.html
@@ -3,7 +3,6 @@ title: "Links"
 author: " "
 ---
 
-<script src="{{< blogdown/postref >}}index_files/header-attrs/header-attrs.js"></script>
 
 
 <div id="newspapers-articles-comments-opinions" class="section level3">
@@ -99,6 +98,7 @@ Estimating a Parameter from a Random Sample <a href="https://t.co/H2KxnLzDyH">pi
 </ul>
 <p><strong>Visualization</strong></p>
 <ul>
+<li><p><a href="https://gt.albert-rapp.de/">Creating beautiful tables in R with {gt}</a></p></li>
 <li><p><a href="https://animate.style/">5 CSS Animation libraries for every developer</a></p></li>
 <li><p><a href="http://guessthecorrelation.com/">Guess the correlation</a></p></li>
 <li><p><a href="http://mfviz.com/hierarchical-models/">Multilevel models visualization</a></p></li>
@@ -144,6 +144,8 @@ Estimating a Parameter from a Random Sample <a href="https://t.co/H2KxnLzDyH">pi
 <div id="search-information-literature-reviews-others" class="section level2">
 <h2>Search information, literature reviews &amp; others</h2>
 <ul>
+<li><p><a href="https://www.litmaps.com/">litmaps</a></p></li>
+<li><p><a href="https://openknowledgemaps.org/">Open knowledge Maps</a></p></li>
 <li><p><a href="https://www.ehu.eus/ccwintco/uploads/e/ef/How_to_write_a_good_introduction.pdf">How to write an introduction</a></p></li>
 <li><p><a href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0003804">Articles by Latin American Authors in Prestigious Journals Have Fewer Citations</a></p></li>
 </ul>
