--- a/static/presentations/invalsi-2022/COES_2022-focusedonradical.html
+++ b/static/presentations/invalsi-2022/COES_2022-focusedonradical.html
@@ -176,7 +176,7 @@ class: inverse animated fadeOutLeft
 
 ![](files/results_iea/protesting.png)
 
-- Escaso conocimiento sobre causas y consecuencias, para las próximas generaciones e instituciones
+- Foco en comprensión de causas y consecuencias (efectos en próximas generaciones e instituciones)
 
 ---
 ## Factores relacionados con las protestas
@@ -198,7 +198,7 @@ class: inverse animated fadeOutLeft
 
 - Desigualdad económica
 
-- Diversos efectos en diferentes tipos de participación.
+- Diversos efectos en diferentes tipos de participación
 
 - Desigualdad y participación juvenil: aún poco claro
 
@@ -442,7 +442,7 @@ class: front middle
 .grey[
 Funding: ANID/FONDECYT/11190508
 ANID/FONDECYT/1210847
-ANID/FONDAP/COES 111
+ANID/FONDAP/COES
 ]
 
 .red[
