update docencia y publicaciones

--- a/content/docencia/desarrollo-tesis/index.html
+++ b/content/docencia/desarrollo-tesis/index.html
@@ -1,12 +1,13 @@
 ---
-title: "Guía de memorias, seminarios y tesis"
+title: "Guía de memorias y tesis"
 author: " "
+# Date published
+date: "2019-03-01" 
 ---
 
-<script src="{{< blogdown/postref >}}index_files/header-attrs/header-attrs.js"></script>
 
 
-<p>La guía de seminarios/memorias/tesis es una actividad de acompañamiento semestral que incluye:</p>
+<p>La guía de seminarios de grado/memorias/tesis es una actividad de acompañamiento semestral que incluye:</p>
 <ul>
 <li><p>asistencia y presentación en el <a href="/post/coloquio/">Coloquio de Investigación en Desigualdad y Ciudadanía</a>. Parte central de la elaboración de trabajos de investigación es aprender de cómo presentan su trabajo otr_s investigadores, las preguntas que surgen del público, los comentarios y la defensa de los argumentos, y la retroalimentación al presentar</p></li>
 <li><p>entrega de dos informes semestrales (ver abajo detalle)</p></li>
