tesis & otros ajustes

--- a/content/links/index.html
+++ b/content/links/index.html
@@ -35,6 +35,9 @@ author: " "
 </div>
 <div id="open-science" class="section level3">
 <h3>Open Science</h3>
+<ul>
+<li><a href="https://www.tandfonline.com/toc/ujse20/current">Teaching Reproducibility 2022, special issue of the Journal of Statistics and Data Science Education</a></li>
+</ul>
 <p>-<a href="https://www.annaclemens.com/blog/open-science-publishing-access-tools?utm_content=buffer366b2&amp;utm_medium=social&amp;utm_source=twitter.com&amp;utm_campaign=buffer">13 OPEN PUBLISHING TOOLS</a></p>
 <p>-<a href="https://besjournals.onlinelibrary.wiley.com/doi/10.1111/2041-210X.13961">Writing clean code</a></p>
 <ul>
@@ -61,6 +64,7 @@ author: " "
 <h3>Data analysis</h3>
 <p><strong>Data preparation &amp; modeling</strong></p>
 <ul>
+<li><p><a href="http://rtutor.ai/">RTutor - Talk to your data via AI</a></p></li>
 <li><p><a href="https://juba.github.io/questionr/articles/recoding_addins.html">questionr: R package to make surveys processing easier</a></p></li>
 <li><p><a href="https://cran.r-project.org/web/packages/esquisse/vignettes/get-started.html">esquisse: R Dashboard</a></p></li>
 <li><p><a href="https://cran.r-project.org/web/packages/editData/readme/README.html">package editData : An RStudio Addin for Editing A ‘data.frame’</a></p></li>
@@ -141,21 +145,20 @@ Estimating a Parameter from a Random Sample <a href="https://t.co/H2KxnLzDyH">pi
 <li><p><a href="http://journals.sagepub.com/doi/abs/10.1177/0003122418806282">Guidelines for quantitative submissions ASR</a></p></li>
 </ul>
 </div>
-<div id="search-information-literature-reviews-others" class="section level2">
-<h2>Search information, literature reviews &amp; others</h2>
+<div id="search-information-literature-reviews-publication-others" class="section level2">
+<h2>Search information, literature reviews, publication &amp; others</h2>
 <ul>
 <li><p><a href="https://www.litmaps.com/">litmaps</a></p></li>
 <li><p><a href="https://openknowledgemaps.org/">Open knowledge Maps</a></p></li>
 <li><p><a href="https://www.ehu.eus/ccwintco/uploads/e/ef/How_to_write_a_good_introduction.pdf">How to write an introduction</a></p></li>
 <li><p><a href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0003804">Articles by Latin American Authors in Prestigious Journals Have Fewer Citations</a></p></li>
-</ul>
-<p>-<a href="https://www.researchrabbit.ai/">Research Rabbit</a></p>
-<ul>
+<li><p><a href="https://www.researchrabbit.ai/">Research Rabbit</a></p></li>
 <li><p><a href="https://www.sciencedirect.com/science/article/pii/S0148296319304564?ref=pdf_download&amp;fr=RR-2&amp;rr=7247ec74c8a17523">Literature review as a research methodology: An overview and guidelines</a></p></li>
 <li><p>Para partir, <a href="https://www.annualreviews.org/">Annual Reviews</a></p></li>
 <li><p><a href="https://elicit.org/">Elicit</a></p></li>
 <li><p><a href="https://www.connectedpapers.com/">Connected Papers</a></p></li>
 <li><p><a href="http://isco.unla.edu.ar/edunla/cuadernos/catalog/view/32/41/126-4">Martinovich (2022) Búsqueda Bibliográfica</a></p></li>
+<li><p><a href="https://www.pnas.org/doi/full/10.1073/pnas.2205779119">Nobel and novice: Author prominence affects peer review</a></p></li>
 </ul>
 </div>
 <div id="teaching-resources" class="section level2">
