--- a/content/contacto/index.html
+++ b/content/contacto/index.html
@@ -2,13 +2,14 @@
 title: "Contacto"
 ---
 
-<script src="{{< blogdown/postref >}}index_files/header-attrs/header-attrs.js"></script>
 
 
 <div id="horas-de-reunión" class="section level3">
 <h3>Horas de reunión</h3>
 <ul>
-<li>Inscribirse abajo para horarios de oficina Jueves en la tarde, una vez inscrito no es necesario enviar correo ni confirmar. Las reuniones online son en <a href="https://meet.google.com/yan-ghpc-yge">Meet</a></li>
+<li>Inscribirse abajo; realizada la inscripción no es necesario enviar correo ni confirmar.</li>
+<li>Las reuniones pueden ser presenciales u online, en este último caso en <a href="https://bit.ly/reuniones-jc">Meet, link: bit.ly/reuniones-jc</a>.</li>
+<li>Si no hay horarios disponibles y se requiere una reunión pronto, escribir a <a href="juancastillov@uchile.cl">juancastillov@uchile.cl</a></li>
 </ul>
 <!-- Calendly inline widget begin -->
 <div class="calendly-inline-widget" data-url="https://calendly.com/juancastillov/horas-oficina" style="min-width:320px;height:1280px;">
