--- a/content/docencia/desarrollo-tesis/index.html
+++ b/content/docencia/desarrollo-tesis/index.html
@@ -2,62 +2,82 @@
 title: "Guía de memorias y tesis"
 author: " "
 # Date published
-date: "2019-03-01" 
+date: "2024-08-28"
 ---
 
 
 
-<p>La guía de seminarios de grado/memorias/tesis es una actividad de acompañamiento semestral que incluye:</p>
+<p>La guía de seminarios de grado/memorias/tesis es una actividad de acompañamiento semestral de tesistas que incluye:</p>
 <ul>
-<li><p>asistencia y presentación en el <a href="/post/coloquio/">Coloquio de Investigación en Desigualdad y Ciudadanía</a>. Parte central de la elaboración de trabajos de investigación es aprender de cómo presentan su trabajo otr_s investigadores, las preguntas que surgen del público, los comentarios y la defensa de los argumentos, y la retroalimentación al presentar</p></li>
+<li><p>reuniones periódicas de presentación de avances y retroalimentación</p></li>
+<li><p>presentación oral del trabajo una vez al semestre</p></li>
 <li><p>entrega de dos informes semestrales (ver abajo detalle)</p></li>
-<li><p>reuniones de evaluación y asesoría (al menos dos al semestre, anotarse en <a href="/contacto/">página de contacto</a>)</p></li>
 </ul>
 <p><br></p>
 <div id="informes-y-fechas" class="section level2">
 <h2>Informes y fechas</h2>
-<p>Se entregarán 2 informes durante el semestre, uno de avance y uno final.</p>
+<p>Se entregarán 2 informes durante el semestre, uno de avance y uno final. Cada informe debe ir acompañado de un párrafo de autoevaluación y de una nota.</p>
 <ul>
 <li><p>Seminario de grado:</p>
 <ul>
 <li><p>informe de avance: contempla la definición del problema de investigación, objeto de estudio, pregunta de investigación, revisión inicial de literatura, propuesta de sección metodológica disponibilidad de datos. (app. 1000 palabras).</p></li>
-<li><p>informe final: debe incorporar los comentarios al informe de avance y avanzar en la propuesta metodológica incluyendo análisis preliminares univariados.</p></li>
+<li><p>informe final: debe incorporar los comentarios al informe de avance y avanzar en la propuesta metodológica incluyendo análisis preliminares univariados. (app 4000 palabras)</p></li>
 </ul></li>
 <li><p>Seminario de título 1</p>
 <ul>
-<li><p>informe de avance: ajuste de antecedentes conceptuales y finalización de sección metodológica.</p></li>
-<li><p>informe final: incorporación de comentarios y avance de análisis bivariados</p></li>
+<li><p>informe de avance: ajuste de antecedentes conceptuales y finalización de sección metodológica. (app 5000 palabras)</p></li>
+<li><p>informe final: incorporación de comentarios y avance de análisis bivariados (app. 8000 palabras)</p></li>
 </ul></li>
 <li><p>Seminario de título 2</p>
 <ul>
 <li><p>informe de avance: finalización de análisis y contraste de hipótesis, borrador de conclusión</p></li>
-<li><p>informe final: incorporación de comentarios y finalización de conclusiones.</p></li>
+<li><p>informe final: incorporación de comentarios y finalización de conclusiones. (app 10000/12000 palabras)</p></li>
 </ul></li>
 </ul>
 <p><br></p>
 <div id="funcionamiento" class="section level3">
 <h3>Funcionamiento:</h3>
 <ul>
-<li><p>seminaristas/tesistas se incorporan a canal de Slack, donde se comparte información relativa a las investigaciones y se hace entrega de los informes</p></li>
-<li><p>la entrega de informes puede ser en pdf o html. Se recomienda usar <a href="https://juancarloscastillo.github.io/tesisfacsodown/">tesisfacsodown</a> (video taller <a href="https://www.dropbox.com/s/u3g2x74nj31jsu1/zoom_0.mp4?raw=1">aquí</a>), que permite ambas salidas. Documento de presentación <a href="documents/talleres-cursos/tesisfacsodown/tesisfacsodown.html">aquí</a></p></li>
-<li><p>los comentarios se realizarán mediante <a href="https://hypothes.is/">hypotes.is</a></p></li>
+<li><p>seminaristas/tesistas se incorporan a <a href="https://join.slack.com/t/seminarios-facso/shared_invite/zt-2pz3yo72o-tz4yi7zRGTEFZLZQbkBx1Q">canal de Slack</a>, donde se comparte información relativa a las investigaciones y se hace entrega de los informes</p></li>
+<li><p>la entrega de informes puede ser en pdf o html, idealmente generados con (R)Markdown o Quarto. Se recomienda usar <a href="https://juancarloscastillo.github.io/tesisfacsodown/">tesisfacsodown</a> (video taller <a href="https://www.dropbox.com/s/u3g2x74nj31jsu1/zoom_0.mp4?raw=1">aquí</a>), que permite ambas salidas. Documento de presentación <a href="documents/talleres-cursos/tesisfacsodown/tesisfacsodown.html">aquí</a></p></li>
+<li><p>los comentarios se realizarán mediante <a href="https://hypothes.is/">hypotes.is</a> en el caso de informes en html, o se enviarán comentarios por Slack</p></li>
 <li><p>Después de la entrega de cada informe, anotarse en los <a href="/contacto">horarios de reunión con estudiantes</a> para recibir retroalimentación</p></li>
-<li><p>Presentar al menos 1 vez al semestre en el <a href="/post/coloquio/">Coloquio de Investigación en Desigualdad y Ciudadanía.</a></p></li>
 <li><p>Recomendaciones de escritura académica <a href="http://bit.ly/2e4rKiK">aquí</a>, video sesión disponible <a href="https://www.dropbox.com/s/4if7bpbbhuo7406/zoom_0.mp4?raw=1">aquí</a></p></li>
-<li><p>Entrega de informes en formato (R)Markdown, html o pdf</p></li>
 <li><p>Para facilitar el versionamiento de los informes y la entrega de comentarios se sugiere el uso de <a href="https://github.com/">Git/Github</a></p></li>
 <li><p>También por temas de apertura se recomienda inscribir el proyecto en el <a href="https://osf.io/">Open Science Framework</a></p></li>
 </ul>
 </div>
-<div id="fechas-entrega-informes" class="section level3">
-<h3>Fechas entrega informes</h3>
-<p>Por regla general el <strong>informe de avance</strong> se entrega hasta <strong>dos semanas después de la presentación</strong>, o si no se ha alcanzado a presentar a más tardar a fines de Mayo. El <strong>informe final</strong> se entrega la última semana lectiva del semestre, y debe incluir un párrafo de autoevaluación y una nota propuesta.</p>
+<div id="calendario-de-actividades-2do-sem-2024" class="section level3">
+<h3>Calendario de actividades (2do sem 2024)</h3>
+<ul>
+<li><p>Agosto: primera reunión de organización</p></li>
+<li><p>Septiembre:</p>
+<ul>
+<li>Miércoles 11: reunión</li>
+<li>Miércoles 25: reunión</li>
+</ul></li>
+<li><p>Octubre</p>
+<ul>
+<li>Viernes 4: entrega informe de avance</li>
+<li>Miércoles 16: reunión</li>
+<li>Miércoles 30: reunión</li>
+</ul></li>
+<li><p>Noviembre</p>
+<ul>
+<li>Miércoles 13: reunión</li>
+<li>Viernes 22: entrega informe final</li>
+<li>Miércoles 27: presentación oral final</li>
+</ul></li>
+</ul>
+<p>Los horarios de reuniones grupales de miércoles en la tarde son por lo general a las 15:00 para seminario de grado, y a las 16:00 para seminario de título</p>
+<p>Además de estas actividades, luego de la entrega de cada informe se realizará una reunión de retroalimentación individual del trabajo.</p>
 </div>
 </div>
 <div id="links" class="section level1">
 <h1>Links</h1>
 <ul>
 <li><p><a href="/images/research_gaps.jpeg">Research Gaps</a></p></li>
+<li><p><a href="https://osf.io/preprints/socarxiv/69wrq/">Criteria of Research Quality in Sociology: An Analytical-Empirical Perspective</a></p></li>
 <li><p>Taller escritura académica 2021, link <a href="../../seminarios-talleres/escritura-academica/escritura-academica.html">documento presentación</a></p></li>
 <li><p><a href="https://juancarloscastillo.github.io/tesisfacsodown/">Presentación tesisfacsodown</a></p></li>
 <li><p><a href="https://ciudadseva.com/texto/del-rigor-en-la-ciencia/">Del rigor en la ciencia</a></p></li>
@@ -67,6 +87,5 @@ date: "2019-03-01"
 <li><p><a href="https://repositori.upf.edu/handle/10230/44599">Publicación de artículos académicos: buenas prácticas y recomendaciones para la redacción y envío a revistas científicas</a></p></li>
 <li><p><a href="https://estrategias-ic.netlify.app/docpres/02_formu/02_formu.html#1">Formulación de una investigación cuantitativa (documento de presentación)</a>.</p></li>
 <li><p><a href="https://estrategias-ic.netlify.app/readings/cap3Hernandezetal2014.pdf">Hernández et al El Planteamiento Cuantitativo del Problema</a></p></li>
-<li><p><a href="https://scielo.conicyt.cl/scielo.php?script=sci_arttext&amp;pid=S0717-95022013000400056">Manterola &amp; Otzen (2013) Porqué Investigar y Cómo Conducir una Investigación</a></p></li>
 </ul>
 </div>
