add calendar to seminarios

--- a/content/docencia/desarrollo-tesis/index.html
+++ b/content/docencia/desarrollo-tesis/index.html
@@ -71,6 +71,8 @@ date: "2024-08-28"
 </ul>
 <p>Los horarios de reuniones grupales de miércoles en la tarde son por lo general a las 15:00 para seminario de grado, y a las 16:00 para seminario de título</p>
 <p>Además de estas actividades, luego de la entrega de cada informe se realizará una reunión de retroalimentación individual del trabajo.</p>
+<iframe src="https://calendar.google.com/calendar/embed?src=c_b52380b872af208e4f98dfc1f82c7fffc7bbe57879364d0c2096c3f892bc4986%40group.calendar.google.com&amp;ctz=America%2FSantiago" style="border: 0" width="800" height="600" frameborder="0" scrolling="no">
+</iframe>
 </div>
 </div>
 <div id="links" class="section level1">
