presentación esc académica

--- a/static/seminarios-talleres/escritura-academica/escritura-academica.html
+++ b/static/seminarios-talleres/escritura-academica/escritura-academica.html
@@ -4,7 +4,8 @@
     <title>Escritura-académica</title>
     <meta charset="utf-8" />
     <meta name="author" content=".small[Juan Carlos Castillo    Departamento de Sociología - UCH / COES   ]" />
-    <script src="libs/header-attrs-2.11/header-attrs.js"></script>
+    <meta name="date" content="2024-11-28" />
+    <script src="libs/header-attrs-2.28/header-attrs.js"></script>
     <link href="libs/tile-view-0.2.6/tile-view.css" rel="stylesheet" />
     <script src="libs/tile-view-0.2.6/tile-view.js"></script>
     <link href="libs/animate.css-3.7.2/animate.xaringan.css" rel="stylesheet" />
@@ -32,13 +33,15 @@ background-size: cover
 &lt;br&gt;
 &lt;br&gt;
 
-# .grey[Algunas Notas y Recomendaciones sobre] .purple[Escritura Académica]
+# .grey[Taller de] .purple[Escritura Académica]
 
-.white[Juan Carlos Castillo]
+&lt;br&gt;
+
+.white[Juan Carlos Castillo, Departamento de Sociología - Universidad de Chile]
 
 [.purple[jc-castillo.com]](https://juancarloscastillo.github.io/jc-castillo/)
 
-.small[Abril 2021]
+.small[Noviembre 2024]
 
 ???
 
@@ -82,6 +85,12 @@ class: inverse middle center
 class: inverse middle center
 
 ### Típicamente, las secciones de un trabajo (empírico) son: abstract, introducción, antecedentes conceptuales y empíricos , datos variables y métodos, resultados/discusión, conclusiones
+
+---
+class: center
+ 
+ 
+![:scale 40%](https://jc-castillo.com/post/escritura-academica/sandclock_hu762e9e1af0af75eb5b2c1e5545f49bb6_81903_1200x1200_fit_lanczos_2.png)
 
 ---
 class: inverse
@@ -353,7 +362,7 @@ background-size: cover
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
-<script src="https://multinivel.netlify.com/docpres/xaringan_custom/macros.js"></script>
+<script src="https://multinivel.netlify.app/docpres/xaringan_custom/macros.js"></script>
 <script>var slideshow = remark.create({
 "ratio": "16:9",
 "highlightStyle": "github",
@@ -399,6 +408,19 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
     deleted = true;
   });
 })();
+// add `data-at-shortcutkeys` attribute to <body> to resolve conflicts with JAWS
+// screen reader (see PR #262)
+(function(d) {
+  let res = {};
+  d.querySelectorAll('.remark-help-content table tr').forEach(tr => {
+    const t = tr.querySelector('td:nth-child(2)').innerText;
+    tr.querySelectorAll('td:first-child .key').forEach(key => {
+      const k = key.innerText;
+      if (/^[a-z]$/.test(k)) res[k] = t;  // must be a single letter (key)
+    });
+  });
+  d.body.setAttribute('data-at-shortcutkeys', JSON.stringify(res));
+})(document);
 (function() {
   "use strict"
   // Replace <script> tags in slides area to make them executable
